crates/pg_syntax/tests/snapshots/postgres_regress/text@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%2$*1$L<<', 10, 'Hello');"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..27
        Sconst@14..27 "'>>%2$*1$L<<'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..31
        Iconst@29..31 "10"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..40
        Sconst@33..40 "'Hello'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

