crates/pg_syntax/tests/snapshots/postgres_regress/text@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%*1$s<<', 10, 'Hello');"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..25
        Sconst@14..25 "'>>%*1$s<<'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..29
        Iconst@27..29 "10"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..38
        Sconst@31..38 "'Hello'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

