crates/pg_syntax/tests/snapshots/postgres_regress/text@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%-s<<', 'Hello');"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..32
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..23
        Sconst@14..23 "'>>%-s<<'"
      Ascii44@23..24 ","
      Whitespace@24..25 " "
      AConst@25..32
        Sconst@25..32 "'Hello'"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

