crates/pg_syntax/tests/snapshots/postgres_regress/text@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%2$*1$L<<', NULL, 'Hello');"
---
SelectStmt@0..44
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..27
        Sconst@14..27 "'>>%2$*1$L<<'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..33
        NullP@29..33 "NULL"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..42
        Sconst@35..42 "'Hello'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

