crates/pg_syntax/tests/snapshots/postgres_regress/text@73.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%2$*1$L<<', 0, 'Hello');"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..27
        Sconst@14..27 "'>>%2$*1$L<<'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..30
        Iconst@29..30 "0"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..39
        Sconst@32..39 "'Hello'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

