crates/pg_syntax/tests/snapshots/postgres_regress/tid@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT currtid2('tid_matview'::text, '(0,1)'::tid);"
---
SelectStmt@0..51
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..49
    FuncCall@7..49
      Ident@7..15 "currtid2"
      Ascii40@15..16 "("
      TypeCast@16..35
        AConst@16..29
          Sconst@16..29 "'tid_matview'"
        Typecast@29..31 "::"
        TypeName@31..35
          TextP@31..35 "text"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      TypeCast@37..49
        AConst@37..44
          Sconst@37..44 "'(0,1)'"
        Typecast@44..46 "::"
        TypeName@46..49
          Ident@46..49 "tid"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

