crates/pg_syntax/tests/snapshots/postgres_regress/tid@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT currtid2('tid_seq'::text, '(0,1)'::tid);"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..15 "currtid2"
      Ascii40@15..16 "("
      TypeCast@16..31
        AConst@16..25
          Sconst@16..25 "'tid_seq'"
        Typecast@25..27 "::"
        TypeName@27..31
          TextP@27..31 "text"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      TypeCast@33..45
        AConst@33..40
          Sconst@33..40 "'(0,1)'"
        Typecast@40..42 "::"
        TypeName@42..45
          Ident@42..45 "tid"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

